# rosu-pp-older

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/any/: mod.rs
src/any_2024/: mod.rs
src/fruits_2022/: attributes.rs  convert.rs  difficulty_object.rs  mod.rs  movement.rs  pp.rs
src/fruits_2024/: attributes.rs  mod.rs
src/fruits_2025/: attributes.rs  convert.rs  mod.rs
src/fruits_ppv1/: catch_object.rs  difficulty_object.rs  math_util.rs  mod.rs  movement.rs  pp.rs  slider_state.rs
src/mania_2018/: mod.rs  pp.rs  strain.rs
src/mania_2022/: attributes.rs  difficulty_object.rs  mania_object.rs  mod.rs  pp.rs  strain.rs
src/mania_ppv1/: mod.rs  pp.rs  strain.rs
src/osu_2014_july/: mod.rs  osu_object.rs  pp.rs  stars.rs
src/osu_2014_may/: pp.rs  stars.rs
src/osu_2015/: curve.rs  difficulty_object.rs  osu_object.rs  pp.rs  skill.rs  slider_state.rs  stars.rs
src/osu_2015_april/: curve.rs  difficulty_object.rs  pp.rs  skill_kind.rs  stars.rs
src/osu_2015_february/: osu_object.rs  pp.rs  stars.rs
src/osu_2018/: curve.rs  difficulty_object.rs  math_util.rs  mod.rs  osu_object.rs  pp.rs  skill.rs  skill_kind.rs  stars.rs
src/osu_2019/: control_point_iter.rs  mod.rs  osu_object.rs  pp.rs  skill.rs  skill_kind.rs  stars.rs
src/osu_2021/: control_point_iter.rs  mod.rs  osu_object.rs  pp.rs  stars.rs
src/osu_2021_january/: control_point_iter.rs  mod.rs  osu_object.rs  pp.rs  skill.rs  slider_state.rs  stars.rs
src/osu_2021_july/: difficulty_object.rs  mod.rs  osu_object.rs  pp.rs  skill.rs  skill_kind.rs  slider_state.rs
src/osu_2022/: mod.rs  (+6 more)
(+148 files in other folders)
