[package]
name = "rosu-pp-older"
version = "0.2.0"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
edition = "2018"

[dependencies]
# rosu-pp = { git = "https://github.com/MaxOhn/rosu-pp", branch = "main" }
rosu-pp = { git = "https://github.com/MaxOhn/rosu-pp", branch = "pp-update" }
# rosu-pp = { path = "../rosu-pp" }
# rosu-map = { version = "0.2.0" }
rosu-map = { git = "https://github.com/MaxOhn/rosu-map" }
rosu-mods = { version = "0.3.0" }